--- a/main.css
+++ b/main.css
@@ -22,6 +22,12 @@ main {
     padding: 20px;
 }
 
+.container {
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+}
+
 .introduction {
     width: 100%;
     max-width: 600px;
