--- a/day-07/styles.css
+++ b/day-07/styles.css
@@ -1,7 +1,7 @@
 :root {
-    /* color-scheme: light dark;
-    --primary-color: light-dark(#333, #fafafa);
-    --primary-background: light-dark(#e4e4e4, #121212); */
+    /* color-scheme: light dark; */
+    /* --primary-color: light-dark(#333, #fafafa);
+    --primary-background: light-dark(#e4e4e4, #333); */
 }
 
 .card {
