--- a/main.css
+++ b/main.css
@@ -63,3 +63,41 @@ main {
         cursor: pointer;
     }
 }
+
+@view-transition {
+    navigation: auto;
+}
+
+::view-transition-group(root) {
+    animation-duration: 0.5s;
+}
+
+@keyframes slide-out {
+    from {
+        transform: translateX(0%);
+    }
+
+    to {
+        transform: translateX(-100%);
+    }
+}
+
+@keyframes slide-in {
+    from {
+        transform: translateX(100%);
+    }
+
+    to {
+        transform: translateX(0%);
+    }
+}
+
+/* Apply the custom animation to the old and new page states */
+
+::view-transition-old(root) {
+    animation: 0.4s ease-in both slide-out;
+}
+
+::view-transition-new(root) {
+    animation: 0.4s ease-in both slide-in;
+}
