--- a/day-03/styles.css
+++ b/day-03/styles.css
@@ -24,9 +24,14 @@ input {
 button {
     width: 100%;
     padding: 10px;
-    border: none;
     border-radius: 4px;
-    background-color: gray;
+    border: 1px solid #ddd;
     font-size: 1rem;
+    cursor: pointer;
+}
+
+.form-container:has(:invalid) button {
     cursor: not-allowed;
+    border: none;
+    background-color: gray;
 }
