--- a/day-08/styles.css
+++ b/day-08/styles.css
@@ -14,9 +14,11 @@ form {
 
 input[type="checkbox"],
 input[type="radio"] {
+    accent-color: rgb(255, 255, 128);
 }
 
 progress {
     width: 100%;
     height: 20px;
+    accent-color: rgb(255, 255, 128);
 }
