--- a/day-12/styles.css
+++ b/day-12/styles.css
@@ -28,4 +28,37 @@
 
 #content {
     margin-top: 20px;
+    view-transition-name: content;
+}
+
+@keyframes move-out {
+    from {
+        transform: translateX(0%);
+    }
+
+    to {
+        transform: translateX(-100%);
+    }
+}
+
+@keyframes move-in {
+    from {
+        transform: translateX(100%);
+    }
+
+    to {
+        transform: translateX(0%);
+    }
+}
+
+::view-transition-group(content) {
+    opacity: 0.3;
+}
+
+::view-transition-old(content) {
+    animation: 0.4s ease-in both move-out;
+}
+
+::view-transition-new(content) {
+    animation: 0.4s ease-in both move-in;
 }
