--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@
     --summary-color: light-dark(#d9d9d9, #363636);
     --green-dark: light-dark(#4caf50, #2e7d32);
     --green-light: light-dark(#81c784, #4caf50);
+    view-transition-name: root;
 }
 
 body {
@@ -62,4 +63,40 @@ main {
         background: var(--summary-color);
         cursor: pointer;
     }
+}
+
+@view-transition {
+    navigation: auto;
+}
+
+::view-transition-group(root) {
+    animation-duration: 0.5s;
+}
+
+@keyframes move-out {
+    from {
+        transform: translateY(0%);
+    }
+
+    to {
+        transform: translateY(-100%);
+    }
+}
+
+@keyframes move-in {
+    from {
+        transform: translateY(100%);
+    }
+
+    to {
+        transform: translateY(0%);
+    }
+}
+
+::view-transition-old(root) {
+    animation: 0.4s ease-in both move-out;
+}
+
+::view-transition-new(root) {
+    animation: 0.4s ease-in both move-in;
 }
